trunk/Archive/a9df5e7f7a705817f65e8fbdb2a121d9-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In member function ‘inner& inner::operator=(const inner&)’:
main.cpp:32:5: error: expected ‘;’ before ‘}’ token
     }
     ^
main.cpp: In member function ‘outer& outer::operator=(const outer&)’:
main.cpp:69:5: error: expected ‘;’ before ‘}’ token
     }
     ^
